--- a/sajadv-config.yml
+++ b/sajadv-config.yml
@@ -1,7 +1,3 @@
-server:
-  servlet:
-    context-path: /sajadv-persons-api/v1
-
 spring:
   profiles: default
   jpa:
@@ -46,12 +42,33 @@ logging:
 
 spring:
   profiles: production
+  jpa:
+    hibernate.ddl-auto: update
+    properties:
+        hibernate:
+          dialect: org.hibernate.dialect.PostgreSQLDialect
   datasource:
     url: jdbc:postgresql://sajadv-db:5432/sajadv
     username: postgres
     password: s4j@dv2020
+  cloud:
+    loadbalancer:
+        ribbon:
+        enabled: false
 
 eureka:
  client:
    serviceUrl:
      defaultZone: http://eureka:8761/eureka/
+   registerWithEureka: true
+   fetchRegistry: true
+
+storage:
+ local:
+   images: /home/uploads/images/
+
+logging:
+level:
+    org:
+    springframework:
+        cache: TRACE
