#Alterando configurações para teste de refreshscope

--- a/sajadv-persons-api.yml
+++ b/sajadv-persons-api.yml
@@ -23,6 +23,12 @@ spring:
       ribbon:
         enabled: false
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+
 eureka:
   instance:
     prefer-ip-address: true
